# moraya

./: .gitattributes  .gitignore  .npmrc.example  LICENSE  README.md  package.json  pnpm-lock.yaml  vite.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml  trigger-deploy-on-release.yml
docs/: README.md  private-registry.md
docs/iterations/: v0.0.0-iphone-adaptation.md  v0.1.0-core-platform.md  v0.10.0-mermaid-diagrams.md  v0.11.0-sidebar-enhancement.md  v0.12.0-knowledge-base.md  v0.13.0-vision-input.md  v0.14.0-ai-model-imagehost-enhancement.md  v0.15.0-voice-transcription.md  v0.16.0-plugin-system.md  v0.17.0-homebrew-cask.md  v0.18.0-document-outline.md  v0.19.0-rendering-pipeline.md  v0.2.0-publish-workflow.md  v0.22.0-renderer-plugins.md  v0.23.0-ai-input-voice-source-upgrade.md  v0.24.0-kb-multilevel-image-mirror.md  v0.25.0-regex-search-base64-image.md  v0.3.0-mcp-ecosystem.md  v0.3.1-mcp-marketplace.md  v0.4.0-mcp-container.md  v0.5.0-rss-feed.md  v0.6.0-moraya-security-audit.md  v0.6.0-security-hardening.md  v0.7.0-ipados-adaptation.md  v0.8.0-ai-templates.md  v0.9.0-code-block-enhancement.md
scripts/: bump-version.mjs  generate-icons.mjs  sync-renderer-plugins.mjs
src/: app.d.ts  app.html
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: privacy-policy.md
src-tauri/src/: dock.rs  lib.rs  main.rs  menu.rs  tray.rs
src-tauri/src/commands/: ai_proxy.rs  file.rs  kb.rs  keychain.rs  macos_system_audio.rs  mcp.rs  mod.rs  object_storage.rs  plugin_manager.rs  speech_proxy.rs  update.rs
src/routes/: +page.svelte
(+130 files in other folders)
