[package]
name = "moraya"
version = "0.5.0"
description = "A minimal, AI-ready Markdown editor"
authors = ["Moraya Contributors"]
edition = "2021"

[lib]
name = "moraya_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = ">=2.9,<2.10", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["fs", "io-util"] }
futures-util = "0.3"
dirs = "6"
open = "5"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(feature, values("cargo-clippy"))']

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
